<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PQSetting</string>
    <string name="action_settings">Settings</string>
    <string name="display_mode">Display Mode</string>
    <string name="display_init">Reset Display Setting</string>
    <string name="brightness">Brightness</string>
    <string name="chroma">Hue</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="color_temp">Color Temperature</string>
    <string name="hdr">Dynamic Contrast</string>
    <string name="smart_color">Intelligent Color</string>
    <string name="noise_reduction">Denoise</string>
    <string name="film_detection">Film Mode Detection</string>
    <string name="sharpen">Sharpeness</string>
    <string name="zero">0</string>
    <string name="reset_to_default">Reset to Default</string>
    <string name="reset">Reset</string>
    <string name="video_setting">Video Setting</string>
    <string name="reset_hint">Do you really want to reset?</string>
    <string name="app_name_notfullscreen">PQSetting</string>
    <string name="title_activity_nfs_main">NfsMainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="engine_mode">Imprex Engine</string>
    <string name="standard">Standard</string>
    <string name="vivid">Colorful</string>
    <string name="film">Theater</string>
    <string name="innervation">Sport</string>
    <string name="user_defined">User Defined</string>
    <string name="standard_hint">Do you want to set the standard?</string>
    <string name="vivid_hint">Do you want to set the colorful?</string>
    <string name="film_hint">Do you want to set the theater?</string>
    <string name="innervation_hint">Do you want to set the sport?</string>
    <string name="split_screen">Engine Switch</string>
    <string name="intelligent_color">Intelligent Color</string>
    <string name="dynamic_contrast">Dynamic Contrast</string>
    <string name="definition">Sharpness</string>
    <string name="oversubscription">SuperResolution</string>
    <string name="set_hue">Chroma</string>
    <string name="set_contrast">Contrast</string>
    <string name="set_saturation">Saturation</string>
    <string name="blue">Blue Enhance</string>
    <string name="green">Green Enhance</string>
    <string name="cyan">Cyan Enhance</string>
    <string name="skin">Skin Enhance</string>
    <string name="red_enhance">Red Enhance</string>
    <string name="green_enhance">Green Enhance</string>
    <string name="blue_enhance">Blue Enhance</string>
    <string name="cyan_enhance">Cyan Enhance</string>
    <string name="violet_enhance">Violet Enhance</string>
    <string name="yellow_enhance">Yellow Enhance</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="blue_hint">Do you want to set the blue enhance?</string>
    <string name="green_hint">Do you want to set the green enhance?</string>
    <string name="cyan_hint">Do you want to set the cyan enhance?</string>
    <string name="skin_hint">Do you want to set the skin enhance?</string>
</resources>
