<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/display_layout"
        style="@style/RelativeLayoutStyle"
        android:background="@drawable/input_wide_selector" >

        <LinearLayout style="@style/LeftStyle" >

            <TextView
                android:id="@+id/display_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_mode"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout style="@style/RightStyle" >

            <ImageView
                android:id="@+id/display_left"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/left_normal"
                android:focusable="false" />

            <LinearLayout style="@style/LayoutInfoStyle" >

                <TextView
                    android:id="@+id/display_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/display_right"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/right_normal"
                android:focusable="false" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/brightness_layout"
        style="@style/RelativeLayoutStyle"
        android:background="@drawable/input_wide_selector" >

        <LinearLayout style="@style/LeftStyle" >

            <TextView
                android:id="@+id/brightness_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brightness"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout style="@style/RightStyle" >

            <SeekBar
                android:id="@+id/brightness_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:max="100" />

            <TextView
                android:id="@+id/brightness_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contrast_layout"
        style="@style/RelativeLayoutStyle"
        android:background="@drawable/input_wide_selector" >

        <LinearLayout style="@style/LeftStyle" >

            <TextView
                android:id="@+id/contrast_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrast"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout style="@style/RightStyle" >

            <SeekBar
                android:id="@+id/contrast_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:max="100" />

            <TextView
                android:id="@+id/contrast_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/chroma_layout"
        style="@style/RelativeLayoutStyle"
        android:background="@drawable/input_wide_selector" >

        <LinearLayout style="@style/LeftStyle" >

            <TextView
                android:id="@+id/chroma_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chroma"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout style="@style/RightStyle" >

            <SeekBar
                android:id="@+id/chroma_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:max="100" />

            <TextView
                android:id="@+id/chroma_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/saturation_layout"
        style="@style/RelativeLayoutStyle"
        android:background="@drawable/input_wide_selector" >

        <LinearLayout style="@style/LeftStyle" >

            <TextView
                android:id="@+id/saturation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturation"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout style="@style/RightStyle" >

            <SeekBar
                android:id="@+id/saturation_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:max="100" />

            <TextView
                android:id="@+id/saturation_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
