<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project Licensed under the
        Apache License, Version 2.0 (the "License"); you may not use this file except
        in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
        Unless required by applicable law or agreed to in writing, software distributed
        under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
        OR CONDITIONS OF ANY KIND, either express or implied. See the License for
        the specific language governing permissions and limitations under the License. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingBottom="12dip"
                android:paddingTop="12dip">
    <ImageView android:id="@android:id/icon"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingTop="20dip" />
    <!-- Dummy -->
    <SeekBar android:id="@*android:id/seekbar"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:visibility="gone" />
    <TextView android:textAppearance="?android:attr/textAppearanceSmall"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="16dip"
              android:layout_gravity="left"
              android:text="@string/red_enhance" />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal">
      <SeekBar android:id="@+id/red_seek"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:paddingTop="2dip"
               android:layout_marginRight="@dimen/volume_seekbar_side_margin" />
      <TextView android:id="@+id/red_text"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:paddingLeft="0dip"
                android:textSize="20sp"
                android:textColor="#ff7f7c"
                />
    </LinearLayout>
    <!-- Used for the hue -->
    <TextView android:textAppearance="?android:attr/textAppearanceSmall"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="16dip"
              android:layout_gravity="left"
              android:text="@string/green_enhance" />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal">
      <SeekBar android:id="@+id/green_seek"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:paddingTop="2dip"
               android:layout_marginRight="@dimen/volume_seekbar_side_margin" />
      <TextView android:id="@+id/green_text"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:paddingLeft="0dip"
                android:textSize="20sp"
                android:textColor="#ff7f7c" />
    </LinearLayout>
    <!--  set_contrast-->
    <TextView android:textAppearance="?android:attr/textAppearanceSmall"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="16dip"
              android:layout_gravity="left"
              android:text="@string/blue_enhance" />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal">
      <!-- Used for the notification volume -->
      <SeekBar android:id="@+id/blue_seek"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:paddingTop="2dip"
               android:layout_marginRight="@dimen/volume_seekbar_side_margin" />
      <TextView android:id="@+id/blue_text"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:paddingLeft="0dip"
                android:textSize="20sp"
                android:textColor="#ff7f7c" />
    </LinearLayout>
    <!--  set_saturation-->
    <TextView android:textAppearance="?android:attr/textAppearanceSmall"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="16dip"
              android:layout_gravity="left"
              android:text="@string/cyan_enhance" />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal">
      <!-- Used for the notification volume -->
      <SeekBar android:id="@+id/cyan_seek"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:paddingTop="2dip"
               android:layout_marginRight="@dimen/volume_seekbar_side_margin" />
      <TextView android:id="@+id/cyan_text"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:paddingLeft="0dip"
                android:textSize="20sp"
                android:textColor="#ff7f7c" />
    </LinearLayout>
    <TextView android:textAppearance="?android:attr/textAppearanceSmall"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="16dip"
              android:layout_gravity="left"
              android:text="@string/violet_enhance" />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal">
      <!-- Used for the notification volume -->
      <SeekBar android:id="@+id/violet_seek"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:paddingTop="2dip"
               android:layout_marginRight="@dimen/volume_seekbar_side_margin" />
      <TextView android:id="@+id/violet_text"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:paddingLeft="0dip"
                android:textSize="20sp"
                android:textColor="#ff7f7c" />
    </LinearLayout>
    <TextView android:textAppearance="?android:attr/textAppearanceSmall"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="16dip"
              android:layout_gravity="left"
              android:text="@string/yellow_enhance" />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal">
      <!-- Used for the notification volume -->
      <SeekBar android:id="@+id/yellow_seek"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:paddingTop="2dip"
               android:layout_marginRight="@dimen/volume_seekbar_side_margin" />
      <TextView android:id="@+id/yellow_text"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:paddingLeft="0dip"
                android:textSize="20sp"
                android:textColor="#ff7f7c" />
    </LinearLayout>
  </LinearLayout>
</ScrollView>
